<resources>
    <string name="app_name" translatable="false">Watube</string>
    <string name="startpage">Home</string>
    <string name="subscriptions">Subscriptions</string>
    <string name="library">Library</string>
    <string name="yes">Yes</string>
    <string name="search_hint">Search</string>
    <string name="videos">Videos</string>
    <string name="subscribe">Subscribe</string>
    <string name="unsubscribe">Unsubscribe</string>
    <string name="share">Share</string>
    <string name="download">Download</string>
    <string name="already_downloaded">You already downloaded this video!</string>
    <string name="save">Save</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Log in</string>
    <string name="register">Register</string>
    <string name="logout">Log out</string>
    <string name="cancel">Cancel</string>
    <string name="loggedIn">Logged in.</string>
    <string name="loggedout">Logged out.</string>
    <string name="registered">Registered. Now you can subscribe to channels.</string>
    <string name="already_logged_in">Already logged in. You may log out of your account.</string>
    <string name="instances">Choose…</string>
    <string name="customInstance">Custom</string>
    <string name="region">Region</string>
    <string name="login_register">Log in/register</string>
    <string name="importsuccess">Subscribed</string>
    <string name="import_from_yt">Import subscriptions</string>
    <string name="import_from_yt_summary">From YouTube or NewPipe</string>
    <string name="app_theme">Theme</string>
    <string name="server_error">There seem to be a problem with the selected server. Try another instance.</string>
    <string name="unknown_error">Network error.</string>
    <string name="error">Something went wrong.</string>
    <string name="empty">You have to enter a username and password.</string>
    <string name="notgmail">This is for a Piped account</string>
    <string name="defres">Video resolution</string>
    <string name="grid">Grid columns (portrait)</string>
    <string name="grid_landscape">Grid columns (landscape)</string>
    <string name="emptyList">Nothing here.</string>
    <string name="deletePlaylist">Delete playlist</string>
    <string name="areYouSure">Delete the playlist?</string>
    <string name="createPlaylist">Create playlist</string>
    <string name="createNewPlaylist">Create new playlist</string>
    <string name="create">Create</string>
    <string name="clone">Clone</string>
    <string name="playlistCreated">Playlist created.</string>
    <string name="playlistName">Playlist name</string>
    <string name="emptyPlaylistName">The playlist name can\'t be empty</string>
    <string name="addToPlaylist">Add to playlist</string>
    <string name="success">Done.</string>
    <string name="fail">Failed :(</string>
    <string name="about">About</string>
    <string name="changeLanguage">Language</string>
    <string name="systemLanguage">System</string>
    <string name="systemDefault">System</string>
    <string name="lightTheme">Light</string>
    <string name="darkTheme">Dark</string>
    <string name="subscribers">%1$s subscribers</string>
    <string name="settings">Settings</string>
    <string name="location">Location</string>
    <string name="instance">Instance</string>
    <string name="customization">Adjustments</string>
    <string name="website">Website</string>
    <string name="donate">Donate</string>
    <string name="uploaderAndVideoCount">%1$s • %2$d videos</string>
    <string name="subscriberAndVideoCounts">%1$s subscribers • %2$d videos</string>
    <string name="videoCount">%1$d videos</string>
    <string name="noInternet">Connect to the Internet first.</string>
    <string name="retry">Retry</string>
    <string name="comments">Comments</string>
    <string name="comments_count">Comments (%1$s)</string>
    <string name="replies">Replies</string>
    <string name="channels">Channels</string>
    <string name="albums">Albums</string>
    <string name="all">All</string>
    <string name="playlists">Playlists</string>
    <string name="okay">OK</string>
    <string name="dialog_ok">OK</string>
    <string name="finished">Finished</string>
    <string name="history">History</string>
    <string name="search_history">Search history</string>
    <string name="clear_history">Clear history</string>
    <string name="music_songs">YT Music Songs</string>
    <string name="music_videos">YT Music Videos</string>
    <string name="music_albums">YT Music Albums</string>
    <string name="music_playlists">YT Music Playlists</string>
    <string name="music_artists">YT Music Artists</string>
    <string name="sponsorblock">SponsorBlock</string>
    <string name="sponsorblock_summary">Uses the https://sponsor.ajay.app API</string>
    <string name="segment_skipped">Skipped segment</string>
    <string name="category_segments">Segments</string>
    <string name="category_sponsor">Sponsor</string>
    <string name="app_font">App font</string>
    <string name="app_icon">Icon</string>
    <string name="appearance">Appearance</string>
    <string name="downloads">Downloads</string>
    <string name="update_summary">Check for update</string>
    <string name="advanced">Advanced</string>
    <string name="player">Player</string>
    <string name="version">Version %1$s</string>
    <string name="show_updates">Check updates automatically</string>
    <string name="show_updates_summary">Check for updates automatically every time the app is started.</string>
    <string name="buffering_goal">Preloading</string>
    <string name="buffering_goal_summary">Max. amount of seconds of video to buffer</string>
    <string name="behavior">Behavior</string>
    <string name="seek_increment">Seek increment</string>
    <string name="pauseOnScreenOff">Auto-pause</string>
    <string name="pauseOnScreenOff_summary">Pause playback when the screen is turned off</string>
    <string name="reset">Restore defaults</string>
    <string name="audio_video">Audio and video</string>
    <string name="fullscreen_orientation">Fullscreen orientation</string>
    <string name="autoRotatePlayer">Auto-fullscreen</string>
    <string name="autoRotatePlayer_summary">Fullscreen playback when the device gets turned</string>
    <string name="pure_theme">Deep black (OLED)</string>
    <string name="pure_theme_summary">Saves battery on OLED screens</string>
    <string name="text_size">Text size</string>
    <string name="feed_density">Feed density</string>
    <string name="data_saver_mode">Data-saver mode</string>
    <string name="data_saver_mode_summary">Skip thumbnails and other images</string>
    <string name="system_caption_style">System caption style</string>
    <string name="rich_caption_rendering">Rich caption rendering</string>
    <string name="rich_caption_rendering_summary">Render web captions for a more rich and customized experience</string>
    <string name="captions">Captions</string>
    <string name="general">General</string>
    <string name="caption_settings">Captions</string>
    <string name="default_subtitle_language">Subtitle language</string>
    <string name="notifications">Notifications</string>
    <string name="misc">Misc</string>
    <string name="backup_restore">Backup and restore</string>
    <string name="new_videos_badge">Indicator for new videos</string>
    <string name="new_videos_badge_summary">Show a badge with the amount of new videos if there are some</string>
    <string name="navigation_bar">Navigation bar</string>
    <string name="layout">Layout</string>
    <string name="swipe_controls">Swipe controls</string>
    <string name="swipe_controls_summary">Swipe to adjust the brightness and volume while in fullscreen mode</string>
    <string name="pinch_control">Pinch control</string>
    <string name="pinch_control_summary">Use pinch gesture to zoom in/out</string>
    <string name="captions_size">Captions size</string>
    <string name="double_tap_seek">Double tap to seek</string>
    <string name="double_tap_seek_summary">Tap twice at the left or right to rewind or forward the player position</string>
    <string name="backup_restore_summary">Import and export subscriptions, playlists, …</string>
    <string name="auto_pip">Automatic picture-in-picture</string>
    <string name="auto_pip_summary">Keep playing the video in a small window when leaving the app</string>
    <string name="sleep_timer_all_videos">Apply to all videos</string>
    <string name="show_stats_for_nerds">Show stats for nerds</string>
    <string name="stats_for_nerds_summary">Adds the technical playback details to the player options</string>
    <string name="persistent_search_bar">Persistent search bar</string>
    <string name="persistent_search_bar_summary">Keeps the search bar and the filters at the top of the home screen while scrolling</string>
    <string name="alternative_pip_controls">Alternative PiP controls</string>
    <string name="alternative_pip_controls_summary">Show audio only and skip controls in PiP instead of forward and rewind</string>
    <string name="audio_only_mode">Audio only mode</string>
    <string name="audio_only_mode_summary">Turn Watube into a music player</string>
    <string name="sleep_timer">Sleep timer</string>
    <string name="autoplay_countdown">Autoplay countdown</string>
    <string name="autoplay_countdown_summary">Show a 5s countdown before auto-playing the next video</string>
    <string name="auto_fullscreen_shorts">Auto fullscreen on short videos</string>
    <string name="play_automatically">Play automatically</string>
    <string name="play_automatically_summary">Start playing video automatically when selecting</string>
    <string name="fullscreen_gestures">Enter/exit fullscreen gestures</string>
    <string name="crashlog">Crashlog</string>
    <string name="home_tab_content">Home tab content</string>
    <string name="screen_orientation">Screen orientation</string>
    <string name="gestures">Gestures</string>
    <string name="external_download_provider">External download provider</string>
    <string name="external_download_provider_summary">Enter the package name of the app you want to use for downloading videos. Leave blank to use Watube\'s inbuilt downloader.</string>
    <string name="long_press_fast_forward">Fast forward on long press</string>
    <string name="long_press_fast_forward_summary">Play video with double speed while tapping and holding the screen.</string>
    <string name="clear_cache">Clear cache</string>
    <string name="clear_cache_summary">Frees up storage space · %1$s used</string>
    <string name="maintenance">Maintenance</string>
    <string name="privacy">Privacy</string>
    <string name="privacy_hardening">Privacy hardening</string>
    <string name="privacy_hardening_summary">Block SIM, network and device-based fingerprinting: generic user agent, no telephony data, hardened WebView for integrity tokens</string>
    <string name="privacy_rotation_frequency">Rotation frequency</string>
    <string name="privacy_neutral_region">Neutral region</string>
    <string name="privacy_neutral_region_summary">Request trending and home feeds from a neutral country instead of your device country, so backends never learn where you live. The country rotates at the frequency selected above. Changes the content you see.</string>
    <string name="current_sponsorblock_id">Current SponsorBlock ID</string>
    <string name="sb_user_id_info">Submissions to SponsorBlock use a random, rotating identifier instead of a persistent device ID.</string>
    <string name="privacy_identifiers">Identifiers</string>
    <string name="reset_identifiers">Reset identifiers and WebView data</string>
    <string name="reset_identifiers_summary">Delete the SponsorBlock ID, WebView cookies and website storage used for integrity tokens</string>
</resources>