<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/gestures">

        <SwitchPreferenceCompat
            android:defaultValue="true"
            android:icon="@drawable/ic_swipe_gesture"
            android:summary="@string/swipe_controls_summary"
            app:key="player_swipe_controls"
            app:title="@string/swipe_controls" />

        <SwitchPreferenceCompat
            android:defaultValue="false"
            android:icon="@drawable/ic_fullscreen"
            app:key="fullscreen_gestures"
            app:title="@string/fullscreen_gestures" />

        <SwitchPreferenceCompat
            android:defaultValue="true"
            android:icon="@drawable/ic_pinch_gesture"
            android:summary="@string/pinch_control_summary"
            app:key="player_pinch_control"
            app:title="@string/pinch_control" />

        <SwitchPreferenceCompat
            android:defaultValue="true"
            android:icon="@drawable/ic_skip"
            android:summary="@string/double_tap_seek_summary"
            app:key="double_tap_seek"
            app:title="@string/double_tap_seek" />

        <SwitchPreferenceCompat
            android:defaultValue="false"
            android:icon="@drawable/ic_time_outlined"
            android:summary="@string/long_press_fast_forward_summary"
            app:key="long_press_fast_forward"
            app:title="@string/long_press_fast_forward" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/behavior">

        <com.watube.yard.ui.views.SliderPreference
            android:icon="@drawable/ic_skip"
            app:defValue="10.0"
            app:key="seek_increment"
            app:stepSize="5.0"
            app:title="@string/seek_increment"
            app:valueFrom="5.0"
            app:valueTo="60.0" />

        <SwitchPreferenceCompat
            android:disableDependentsState="true"
            android:icon="@drawable/ic_rotating_circle"
            android:summary="@string/autoRotatePlayer_summary"
            app:defaultValue="false"
            app:key="auto_fullscreen"
            app:title="@string/autoRotatePlayer" />

        <ListPreference
            android:dependency="auto_fullscreen"
            android:icon="@drawable/ic_flip"
            app:defaultValue="ratio"
            app:entries="@array/fullscreenOrientation"
            app:entryValues="@array/fullscreenOrientationValues"
            app:key="fullscreen_orientation"
            app:title="@string/fullscreen_orientation"
            app:useSimpleSummaryProvider="true" />

        <SwitchPreferenceCompat
            android:icon="@drawable/ic_speed"
            android:summary="@string/autoplay_countdown_summary"
            app:defaultValue="false"
            app:key="autoplay_countdown"
            app:title="@string/autoplay_countdown" />

        <SwitchPreferenceCompat
            android:defaultValue="true"
            android:icon="@drawable/ic_open"
            android:summary="@string/auto_pip_summary"
            app:key="auto_pip"
            app:title="@string/auto_pip" />

        <Preference
            android:icon="@drawable/ic_sleep"
            app:key="sleep_timer"
            app:title="@string/sleep_timer" />

        <SwitchPreferenceCompat
            android:defaultValue="false"
            android:icon="@drawable/ic_sleep"
            app:key="sleep_timer_all_videos"
            app:title="@string/sleep_timer_all_videos" />

        <SwitchPreferenceCompat
            android:defaultValue="false"
            android:icon="@drawable/ic_headphones"
            android:summary="@string/audio_only_mode_summary"
            android:title="@string/audio_only_mode"
            app:key="audio_only_mode" />

        <ListPreference
            android:defaultValue="@string/config_default_orientation_pref"
            android:entries="@array/orientation"
            android:entryValues="@array/orientation_values"
            android:icon="@drawable/ic_screen_rotation"
            app:key="orientation"
            app:title="@string/screen_orientation"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/captions">

        <SwitchPreferenceCompat
            android:icon="@drawable/ic_caption"
            app:defaultValue="true"
            app:key="system_caption_style"
            app:title="@string/system_caption_style" />

        <Preference
            android:dependency="system_caption_style"
            android:icon="@drawable/ic_settings"
            app:key="caption_settings"
            app:title="@string/caption_settings" />

        <SwitchPreferenceCompat
            android:icon="@drawable/ic_caption"
            android:summary="@string/rich_caption_rendering_summary"
            app:defaultValue="false"
            app:key="rich_caption_rendering"
            app:title="@string/rich_caption_rendering" />

        <com.watube.yard.ui.views.SliderPreference
            android:icon="@drawable/ic_text"
            android:key="captions_size"
            android:title="@string/captions_size"
            app:defValue="18"
            app:stepSize="1"
            app:valueFrom="8"
            app:valueTo="30" />

        <ListPreference
            android:defaultValue=""
            android:icon="@drawable/ic_caption"
            app:key="default_subtitle"
            app:title="@string/default_subtitle_language" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/misc">

        <com.watube.yard.ui.preferences.EditNumberPreference
            android:icon="@drawable/ic_time"
            app:defaultValue="50"
            app:key="buffering_goal"
            app:summary="@string/buffering_goal_summary"
            app:title="@string/buffering_goal" />

        <SwitchPreferenceCompat
            android:defaultValue="false"
            android:icon="@drawable/ic_headphones"
            android:summary="@string/alternative_pip_controls_summary"
            app:key="alternative_pip_controls"
            app:title="@string/alternative_pip_controls" />

        <SwitchPreferenceCompat
            android:defaultValue="false"
            android:icon="@drawable/ic_fullscreen"
            android:title="@string/auto_fullscreen_shorts"
            app:key="auto_fullscreen_shorts" />

        <SwitchPreferenceCompat
            android:icon="@drawable/ic_pause_filled"
            android:summary="@string/pauseOnScreenOff_summary"
            app:defaultValue="false"
            app:key="pause_screen_off"
            app:title="@string/pauseOnScreenOff" />

        <SwitchPreferenceCompat
            android:defaultValue="true"
            android:icon="@drawable/ic_play_circle"
            android:summary="@string/play_automatically_summary"
            app:key="play_automatically"
            app:title="@string/play_automatically" />

        <SwitchPreferenceCompat
            android:defaultValue="false"
            android:icon="@drawable/ic_info"
            android:summary="@string/stats_for_nerds_summary"
            app:key="stats_for_nerds"
            app:title="@string/show_stats_for_nerds" />

    </PreferenceCategory>


</PreferenceScreen>
