<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <SwitchPreferenceCompat
        app:defaultValue="true"
        app:key="privacy_hardening"
        app:summary="@string/privacy_hardening_summary"
        app:title="@string/privacy_hardening" />

    <ListPreference
        app:defaultValue="24h"
        app:dependency="privacy_hardening"
        app:entries="@array/privacyRotationFrequency"
        app:entryValues="@array/privacyRotationFrequencyValues"
        app:key="privacy_rotation_frequency"
        app:title="@string/privacy_rotation_frequency" />

    <SwitchPreferenceCompat
        app:defaultValue="false"
        app:dependency="privacy_hardening"
        app:key="privacy_neutral_region"
        app:summary="@string/privacy_neutral_region_summary"
        app:title="@string/privacy_neutral_region" />

    <Preference
        app:key="sb_user_id_info"
        app:selectable="false"
        app:summary="@string/sb_user_id_info"
        app:title="@string/current_sponsorblock_id" />

    <PreferenceCategory app:title="@string/privacy_identifiers">

        <Preference
            android:icon="@drawable/ic_delete"
            app:key="reset_identifiers"
            app:summary="@string/reset_identifiers_summary"
            app:title="@string/reset_identifiers" />

    </PreferenceCategory>

</PreferenceScreen>
