<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/appearance">

        <ListPreference
            android:icon="@drawable/ic_theme"
            app:defaultValue="D"
            app:entries="@array/themes"
            app:entryValues="@array/themesValue"
            app:key="theme_toggle"
            app:title="@string/app_theme"
            app:useSimpleSummaryProvider="true" />

        <SwitchPreferenceCompat
            android:icon="@drawable/ic_invert_colors"
            android:summary="@string/pure_theme_summary"
            app:defaultValue="false"
            app:key="pure_theme"
            app:title="@string/pure_theme" />

        <SeekBarPreference
            android:icon="@drawable/ic_text"
            android:key="font_scale"
            android:max="116"
            android:title="@string/text_size"
            app:defaultValue="100"
            app:showSeekBarValue="true" />

        <ListPreference
            android:icon="@drawable/ic_grid"
            app:defaultValue="cozy"
            app:entries="@array/feed_density_entries"
            app:entryValues="@array/feed_density_values"
            app:key="feed_density"
            app:title="@string/feed_density"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            android:icon="@drawable/ic_text"
            android:defaultValue="system"
            app:entries="@array/app_fonts"
            app:entryValues="@array/app_fonts_value"
            app:key="app_font"
            app:title="@string/app_font"
            app:useSimpleSummaryProvider="true" />


        <Preference
            android:icon="@drawable/ic_frame"
            app:key="icon_change"
            app:title="@string/app_icon" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/layout">

        <Preference
            android:icon="@drawable/ic_home"
            app:key="navbar_items"
            app:title="@string/navigation_bar" />

        <MultiSelectListPreference
            android:entries="@array/homeTabItems"
            android:entryValues="@array/homeTabItemsValues"
            android:icon="@drawable/ic_awesome"
            android:key="home_tab_content"
            android:title="@string/home_tab_content"
            app:defaultValue="@array/homeTabItemsValues" />
        <SwitchPreferenceCompat
            android:defaultValue="true"
            android:icon="@drawable/ic_search"
            android:summary="@string/persistent_search_bar_summary"
            app:key="persistent_search_bar"
            app:title="@string/persistent_search_bar" />

        <ListPreference
            android:icon="@drawable/ic_grid"
            app:defaultValue="@integer/grid_items"
            app:entries="@array/grid"
            app:entryValues="@array/grid"
            app:key="grid"
            app:title="@string/grid"
            app:useSimpleSummaryProvider="true" />

        <ListPreference
            android:icon="@drawable/ic_grid"
            app:defaultValue="@integer/grid_items_landscape"
            app:entries="@array/grid"
            app:entryValues="@array/grid"
            app:key="grid_landscape"
            app:title="@string/grid_landscape"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

    <PreferenceCategory app:title="@string/location">

        <ListPreference
            android:icon="@drawable/ic_translate"
            app:defaultValue="sys"
            app:key="language"
            app:title="@string/changeLanguage"
            app:useSimpleSummaryProvider="true" />

    </PreferenceCategory>

</PreferenceScreen>